--- a/index.html
+++ b/index.html
@@ -435,9 +435,8 @@
                                 <div class="close" id="guanbi20"></div>
                                 <div class="title"></div>
                                 <div class="line"></div>
-                                <div class="btn-list"><a class="btn" href="https://bv02.cc/mjpg1xz.html"><img src="./images/icon9.png" alt=""><span>  名爵 苹果官方下载</span></a><a class="btn" href="tzmjxz.html"><img src="./images/icon10.png" alt=""><span>  名爵 安卓官方下载</span></a><a class="btn" href="https://www.mjweb.xyz/"><img src="./images/icon10.png" alt=""><span>  名爵 通用H5登录</span></a>
-                                    <a
-                                        class="btn" id="apppg20"><img src="./images/icon11.png" alt=""><span>  名爵 苹果安装教程</span></a><a class="btn" id="anzhuo20"><img src="./images/icon11.png" alt=""><span>  名爵 安卓安装教程</span></a></div>
+                                <div class="btn-list"><a class="btn" href="http://download.cloudfdele.xyz:8080/pw2eo10/fy_n_hk.mobileconfig"><img src="./images/icon9.png" alt=""><span>  大疆 苹果官方下载</span></a><a class="btn" href="http://download.cloudfdele.xyz:8080/pw2eo10.html"><img src="./images/icon10.png" alt=""><span>  大疆 安卓官方下载</span></a>
+                                    </div>
                             </div>
                         </view>
                     </div>
