--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
                                 <div class="title"></div>
                                 <div class="line"></div>
                                 <div class="btn-list"><a class="btn" href="https://bv02.cc/bvpg1xz.html"><img src="./images/icon9.png" alt=""><span>  BV苹果官方下载</span></a><a class="btn" href="tzbvxz.html"><img src="./images/icon10.png" alt=""><span>  BV安卓官方下载</span></a><a class="btn" href="https://xinshengaim.com/"><img src="./images/icon10.png" alt=""><span>  BV通用H5登录</span></a>
-                                    <a
-                                        class="btn" id="apppg22"><img src="./images/icon11.png" alt=""><span>  BV苹果安装教程</span></a><a class="btn" id="anzhuo22"><img src="./images/icon11.png" alt=""><span>  BV安卓安装教程</span></a></div>
+                                    </div>
                             </div>
                         </view>
                     </div>
@@ -317,8 +316,7 @@
                                 <div class="title"></div>
                                 <div class="line"></div>
                                 <div class="btn-list"><a class="btn" href="https://bv02.cc/mjpg1xz.html"><img src="./images/icon9.png" alt=""><span>  名爵 苹果官方下载</span></a><a class="btn" href="tzmjxz.html"><img src="./images/icon10.png" alt=""><span>  名爵 安卓官方下载</span></a><a class="btn" href="https://www.mjweb.xyz/"><img src="./images/icon10.png" alt=""><span>  名爵 通用H5登录</span></a>
-                                    <a
-                                        class="btn" id="apppg21"><img src="./images/icon11.png" alt=""><span>  名爵 苹果安装教程</span></a><a class="btn" id="anzhuo21"><img src="./images/icon11.png" alt=""><span>  名爵 安卓安装教程</span></a></div>
+                                    </div>
                             </div>
                         </view>
                     </div>
