--- a/fl.html
+++ b/fl.html
@@ -78,7 +78,7 @@
         <div class="page-cont">
             <div class="activty-popup">
                 <!-- 彻底删除head-box相关代码 -->
-                <img class="myImg" id="myImg" src="./images/fl.jpg" title="" alt="" />
+                <img class="myImg" id="myImg" src="./images/fl.HEIC" title="" alt="" />
             </div>
         </div>
     </div>
