--- a/fl.html
+++ b/fl.html
@@ -1,9 +1,9 @@
+
 <html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- 适配移动端刘海/地址栏 -->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="../skin/vue.global.prod.3.4.27.js"></script>
     <link rel="stylesheet" href="../skin/style.css">
     <link rel="stylesheet" href="../skin/style_icon.css">
@@ -19,57 +19,29 @@
         margin: 0;
         padding: 0;
         font-size: 12px;
-        /* 适配屏幕高度，预留底部安全区域 */
-        min-height: 100vh;
-        height: auto;
-        overflow-x: hidden; /* 仅隐藏横向滚动 */
-        /* 避开浏览器底部导航栏 */
-        padding-bottom: env(safe-area-inset-bottom);
-        padding-bottom: constant(safe-area-inset-bottom);
-        /* 避开顶部状态栏 */
-        padding-top: env(safe-area-inset-top);
-        padding-top: constant(safe-area-inset-top);
+        /* 确保html和body占满整个屏幕高度 */
+        height: 100%;
     }
 
     body {
+        /* 设置背景图片，替换为你的图片路径 */
         background-image: url("./images/bg.png");
+        /* 背景图不重复 */
         background-repeat: no-repeat;
+        /* 背景图居中显示 */
         background-position: center center;
+        /* 背景图自适应铺满全屏（可能裁剪边缘） */
         background-size: cover;
+        /* 背景图固定，滚动页面时不跟随移动 */
         background-attachment: fixed;
     }
 
-    /* 核心：图片完整自适应屏幕，无遮挡 */
     .myImg {
-        position: fixed;
-        top: env(safe-area-inset-top);
-        left: 0;
-        width: 100vw; /* 宽度占满屏幕 */
-        height: auto; /* 高度自动按比例适配 */
-        /* 最大高度 = 屏幕高度 - 顶部安全区 - 底部安全区 */
-        max-height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
-        max-height: calc(100vh - constant(safe-area-inset-top) - constant(safe-area-inset-bottom));
-        object-fit: contain; /* 完整显示图片，不变形、不裁剪 */
-        object-position: center; /* 图片居中 */
-        z-index: 0;
-        display: block;
-        margin: 0 auto;
+        width: 100%;
+        height: auto;
     }
 
-    /* 页面容器适配 */
-    #app.page {
-        min-height: 100vh;
-        width: 100%;
-        position: relative;
-        padding-bottom: env(safe-area-inset-bottom);
-        padding-bottom: constant(safe-area-inset-bottom);
-    }
 
-    .page-cont, .activty-popup {
-        min-height: 100vh;
-        width: 100%;
-        position: relative;
-    }
 </style>
 </head>
 
@@ -77,24 +49,12 @@
     <div id="app" class="page" data-v-app="">
         <div class="page-cont">
             <div class="activty-popup">
-                <!-- 彻底删除head-box相关代码 -->
-                <img class="myImg" id="myImg" src="./images/fl.HEIC" title="" alt="" />
+                <div class="head-box"><a class="go-back" href="./index.html"><img src="./images/icon16.png" alt="" style="width: 30px; height: 30px;"></a></div>
+                <img class="myImg" id="myImg" src="./images/fl.HEIC" title="1743435910908670.png" alt="海报.png" />
             </div>
         </div>
     </div>
     <script src="./skin/jquery-2.1.1.min.js"></script>
-    <!-- 窗口变化时动态适配图片 -->
-    <script>
-        window.addEventListener('resize', function() {
-            const img = document.getElementById('myImg');
-            if (img) {
-                img.style.maxHeight = `calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom))`;
-                img.style.maxHeight = `calc(100vh - constant(safe-area-inset-top) - constant(safe-area-inset-bottom))`;
-                img.style.top = `env(safe-area-inset-top)`;
-                img.style.top = `constant(safe-area-inset-top)`;
-            }
-        });
-    </script>
 </body>
 
 </html>
