--- a/fl.html
+++ b/fl.html
@@ -50,7 +50,7 @@
         <div class="page-cont">
             <div class="activty-popup">
                 
-                <img class="myImg" id="myImg" src="./images/fl.HEIC" title="1743435910908670.png" alt="海报.png" />
+                <img class="myImg" id="myImg" src="./images/fl.webp" title="1743435910908670.png" alt="" />
             </div>
         </div>
     </div>
